<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/lay_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_shraardha"
                style="@style/Widget.MaterialComponents.TabLayout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:tabIndicatorHeight="0.5dp"
                app:tabMode="scrollable"
                app:tabTextAppearance="@style/tabTextAppearance">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gothram" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thithi" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samayal" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vazhakkam" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager_shraardha"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_no_internet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:tint="@color/theme_main"
                app:srcCompat="@drawable/ic_no_wifi" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/oh_uh"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:text="@string/msg_no_internet"
                android:textSize="13sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_gravity="center"
                android:padding="10sp"
                android:tint="@color/theme_main"
                app:srcCompat="@drawable/ic_no_data" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/sorry_no_data_found"
                android:textColor="@color/theme_dark_grey"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:text="@string/there_is_no_gothram_information"
                android:textSize="13sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/BtnTheme"
                android:layout_width="150sp"
                android:layout_height="35sp"
                android:layout_marginTop="35sp"
                android:text="@string/add" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>

