<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lato_bold"
        android:padding="5dp"
        android:text="@string/msg_thanks"
        android:textColor="@color/theme_dark_grey"
        android:textSize="16sp"
        tools:targetApi="jelly_bean" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_amount"
        style="@style/MaterialInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:fontFamily="@font/lato_regular"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:textColor="@color/theme_dark_grey"
            android:textSize="16sp"
            tools:targetApi="lollipop" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/BtnTheme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:text="@string/next" />

</androidx.appcompat.widget.LinearLayoutCompat>


