<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/im_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_left_arrow" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="25dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="140dp"
                    android:layout_height="90dp"
                    android:src="@drawable/im_company_logo" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/welcome_to_swadharmaa"
                    android:textColor="@color/theme_dark_grey"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lato_regular"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/msg_login"
                    android:textColor="@color/theme_light_grey"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lay_mobile"
                    style="@style/MaterialInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:fontFamily="@font/lato_regular"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingStart="1dp"
                        android:paddingEnd="1dp"
                        android:textColor="@color/theme_light_grey"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/lato_regular"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/msg_terms"
                    android:textColor="@color/theme_light_grey"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_continue"
                    style="@style/BtnTheme"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/msg_continue" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/theme_light_grey"
                        android:textSize="16sp"
                        tools:ignore="UnusedAttribute" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/create_one"
                        android:textColor="@color/theme_main"
                        android:textSize="16sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/lay_skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/light_grey" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_skip"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="--Skip--"
                        android:textAllCaps="false"
                        android:textColor="@color/theme_main"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/light_grey" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>