<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:padding="2.5dp"
            android:tint="@color/theme_main"
            app:srcCompat="@drawable/ic_megaphone" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/lato_bold"
            android:padding="5dp"
            android:text="@string/msg_receive_announcement"
            android:textColor="@color/theme_dark_grey"
            android:textSize="18sp"
            tools:targetApi="jelly_bean" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/title"
        android:textColor="@color/theme_main"
        android:textSize="16sp"
        tools:targetApi="jelly_bean" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="1dp"
        android:textColor="@color/theme_light_grey"
        android:textSize="15sp"
        tools:targetApi="jelly_bean" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/description"
        android:textColor="@color/theme_main"
        android:textSize="16sp"
        tools:targetApi="jelly_bean" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="1dp"
        android:textColor="@color/theme_light_grey"
        android:textSize="15sp"
        tools:targetApi="jelly_bean" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        style="@style/BtnTheme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/ok" />

</androidx.appcompat.widget.LinearLayoutCompat>


